<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToOutline="true"
    android:background="@drawable/rounded_rectangle">
    
    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/ad_image_desc"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"/>
    
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/image"
        app:layout_constraintStart_toStartOf="@id/image"
        app:layout_constraintEnd_toEndOf="@id/image"
        android:paddingTop="50dp"
        android:paddingBottom="25dp"
        android:paddingStart="35dp"
        android:paddingEnd="35dp"
        android:gravity="center"
        android:background="@drawable/single_ad_header_bg">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearanceTitle"
            android:maxLines="2"
            android:ellipsize="end"
            android:text="@string/ad_title_default_value"/>

        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearanceHeading"
            android:maxLines="2"
            android:ellipsize="end"
            android:text="@string/ad_heading_default_value"/>

    </LinearLayout>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/ad_icon_desc"
        app:layout_constraintTop_toTopOf="@id/header"
        app:layout_constraintBottom_toTopOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15dp"
        app:tint="@color/white"
        android:src="@drawable/profile_image" />

</androidx.constraintlayout.widget.ConstraintLayout>