<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:parentTag="android.widget.LinearLayout">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/profile_image_wrapper"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="30dp"
        app:strokeWidth="2dp"
        app:strokeColor="?colorOnPrimary"
        app:cardBackgroundColor="@color/profile_image_bg">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:contentDescription="@string/profile_picture_desc"
            android:src="@drawable/profile_image"
            app:tint="@color/red_700"
            android:scaleType="centerCrop"/>

    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/lids_count_image"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_margin="10dp"
        android:src="@drawable/profile_image"
        app:tint="?colorSecondary"
        android:contentDescription="@string/lids_count_desc"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/profile_image_wrapper" />

    <TextView
        android:id="@+id/lids_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/lids_count_image"
        app:layout_constraintBottom_toBottomOf="@id/lids_count_image"
        app:layout_constraintStart_toEndOf="@id/lids_count_image"
        android:text="172"/>

    <ImageView
        android:id="@+id/angels_count_image"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_angel_24"
        app:tint="@color/white"
        android:contentDescription="@string/angels_count_desc"
        app:layout_constraintTop_toBottomOf="@id/lids_count_image"
        app:layout_constraintStart_toStartOf="@id/lids_count_image" />

    <TextView
        android:id="@+id/angels_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/angels_count_image"
        app:layout_constraintBottom_toBottomOf="@id/angels_count_image"
        app:layout_constraintStart_toEndOf="@id/angels_count_image"
        android:text="2"/>

</androidx.constraintlayout.widget.ConstraintLayout >